Docs: add <a> link to github repository

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
           <h1>Game</h1>
           <h3>subtitle!!!</h3>
           <p>DescriptionDescriptionDescriptionDescriptionDescription</p>
-          <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+          <a href="https://github.com/Eternity0xd3/RhythmGame" target="_blank">
+            github repository
+          </a>
+          <br /><br />
           <b>Play it with full screen</b>
           <br /><br />
           <div id="btn-group" style="display: block">
