fix: minor fix to the last commit

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <h1>PAUSE</h1>
         <br /><br />
         <button id="continue-btn">继续</button>
+        <button id="restart-btn">重来</button>
         <button id="quit-btn">退出</button>
       </div>
     </div>
